      been False since 1.1.29)
    * Server exceptions are marshalled in the proxy layer now instead of
      in both the proxy and server layers
    * When the repository database is locked, RepositoryLocked exceptions
      are now returned for all code paths (CNY-1596)
    * troveNames method now filter by troveTypes argument (CNY-1838)

o Protocol Changes:
    * Protocol allows passing keyword arguments for exceptions (CNY-747)
    * No longer include useAnonymous flag in return value

Changes in @NEW@:
  o Build Changes:
    * A bug which caused Conary to incorrectly determine the flags
      for python dependencies on 64-bit systems has been fixed.
      (CNY-2091)

Changes in 1.2.0:
  o Build Changes:
    * A bug which caused Conary to compute python dependencies
      incorrectly when using an external version of python (such
      as when building python itself) has been fixed. (CNY-2087)

Changes in 1.1.96:
  o Server Changes
    * External entitlement servers can now specify per-entitlement
      timeouts and automatic retry values (CNY-2060)

  o Client Changes:
    * Update journal did not have an entry for hard links which were
      made to targets which already existed on the system, causing
      system corruption if the journal had to be rolled back. (CNY-1671)
    * The critical update information now includes enough data to
      re-create the original update job. (CNY-1608)
    * Unknown trove info types in the database are properly stored in
      extracted trove info. (CNY-2059)
    * diff and patch now support files without trailing newlines.
      (CNY-1979)

  o Build Changes:
    * More paths (/usr/lib/.*-sharp.*/) have been added to :cil
      components. (CNY-2080)
    * Path ID lookups now ignore permission errors; in such a case, a
      new path ID is computed. (CNY-1911)
    * Conary now handles python files that specify a python interpreter
      that is not available on the system or in the builddir.  It will